--- a/modules/prediction/scenario/BUILD
+++ b/modules/prediction/scenario/BUILD
@@ -14,6 +14,7 @@ cc_library(
         "//modules/prediction/scenario/analyzer:scenario_analyzer",
         "//modules/prediction/scenario/feature_extractor",
         "//modules/prediction/scenario/prioritization:obstacles_prioritizer",
+        "//modules/prediction/scenario/interaction_filter:interaction_filter",
         "//modules/prediction/scenario/right_of_way",
     ],
 )
